--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -14,7 +14,8 @@
     "kevoree-kotlin": "^1.0.2",
     "kevoree-library": "^5.0.4",
     "optimist": ">=0.6.1",
-    "package-json": "^2.3.3"
+    "package-json": "^2.3.3",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3"
