--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -11,11 +11,10 @@
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "kevoree-entities": "next",
-    "kevoree-library": "next",
     "kevoree-kotlin": "^1.0.2",
+    "kevoree-library": "next",
     "optimist": ">=0.6.1",
-    "package-json": "^2.3.3",
-    "semver": "^5.3.0"
+    "pkg-hash": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3"
