--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.9",
+  "version": "3.0.10",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -11,9 +11,9 @@
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "kevoree-entities": "^9.0.0-alpha.1",
-    "kevoree-kotlin": "^1.0.2",
     "kevoree-library": "next",
-    "optimist": ">=0.6.1",
+    "kevoree-validator": "^0.1.3",
+    "optimist": "^0.6.1",
     "pkg-hash": "^2.0.0"
   },
   "devDependencies": {
