--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.14",
+  "version": "3.0.15",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
     "kevoree-gen-model": "./bin/cli.js"
   },
   "dependencies": {
-    "async": "^2.0.0",
+    "async": "^2.1.4",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
-    "kevoree-entities": "^9.0.0-alpha.1",
-    "kevoree-library": "next",
-    "kevoree-validator": "^0.1.3",
+    "kevoree-entities": "^9.0.0",
+    "kevoree-library": "^5.0.10",
+    "kevoree-validator": "^0.1.15",
     "optimist": "^0.6.1",
-    "pkg-hash": "^2.2.0"
+    "pkg-hash": "^2.2.1"
   },
   "devDependencies": {
-    "mocha": "^2.5.3"
+    "mocha": "^3.2.0"
   },
   "keywords": [
     "kevoree",
