--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.15",
+  "version": "3.0.16",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -11,6 +11,7 @@
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "kevoree-entities": "^9.0.0",
+    "kevoree-hash": "^1.0.0",
     "kevoree-library": "^5.0.10",
     "kevoree-validator": "^0.1.15",
     "optimist": "^0.6.1",
