--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "kevoree-gen-model",
-  "version": "3.0.17",
+  "version": "3.0.18",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
+  "scripts": {
+    "test": "mocha",
+    "lint": "eslint kevoree-gen-model.js lib"
+  },
   "bin": {
     "kevoree-gen-model": "./bin/cli.js"
   },
@@ -11,13 +15,13 @@
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "kevoree-entities": "^9.0.0",
-    "kevoree-hash": "^1.0.0",
+    "kevoree-hash": "^2.0.0",
     "kevoree-library": "^5.0.10",
     "kevoree-validator": "^0.1.15",
-    "optimist": "^0.6.1",
-    "pkg-hash": "^2.2.1"
+    "optimist": "^0.6.1"
   },
   "devDependencies": {
+    "eslint": "^3.12.2",
     "mocha": "^3.2.0"
   },
   "keywords": [
@@ -35,9 +39,6 @@
     "example": "examples",
     "test": "test"
   },
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "git@github.com:kevoree/kevoree-gen-model.git"
@@ -45,5 +46,16 @@
   "bugs": {
     "url": "https://github.com/kevoree/kevoree-gen-model/issues"
   },
-  "homepage": "https://github.com/kevoree/kevoree-gen-model"
+  "homepage": "https://github.com/kevoree/kevoree-gen-model",
+  "eslintConfig": {
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended"
+    ],
+    "rules": {
+      "no-console": 0
+    }
+  }
 }
